--- a/pipes/Todo.txt
+++ b/pipes/Todo.txt
@@ -1,4 +1,4 @@
-(1) Simulate the unidrectional and bidrectional pipes discussed in the class for message exchange.
+(1) Simulate the unidrectional and bidrectional pipes discussed in the class for message exchange. D
 (2) Achieve the following using pipes (chose 1/2 directional appropriately):
     (a) Case conversion using (i) user conversion (ii) tr command (discussed in class)
     (b) search for specific process names using ps and grep command in a piped fashion.
